# allocator

./: .gitignore  Doxyfile  Doxyfile.in  LICENSE  Makefile  Makefile.am  README.md  USAGE.md  allocator_common.h  configure.ac  liballocator.pc.in
include/: Makefile.am
include/allocator/: allocator.h  common.h  driver.h  helpers.h  utils.h
m4/: ax_search_libs_opt.m4
scripts/: json-generator.pl
src/: Makefile.am  allocator.c  constraint_funcs.c  constraint_funcs.h  driver_manager.c  driver_manager.h
src/constraints/: address_alignment.c  lcm.c  lcm.h  max_pitch.c  pitch_alignment.c
src/drivers/: Makefile.am
src/drivers/nouveau/: Makefile.am  nouveau_allocator_driver.c  nouveau_allocator_driver.syms
tests/: Makefile.am  capability_merging.c  capability_set_ops.c  create_allocation.c  device_alloc.c  drm_import_allocation.c  test_utils.c  test_utils.h
